Fixed small bug

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/GeneralWithStatic.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/GeneralWithStatic.less
@@ -173,6 +173,8 @@ body {
             .displayFlex;
             .align-items(center);
             .justifyContet(flex-start);
+            max-width: 100%;
+            padding-right: 10px;
 
             .icon {
                 width: 60px;
@@ -190,10 +192,10 @@ body {
                 line-height: 29px;
                 height: 58px;
                 margin: 0;
-                padding: 0 10px;
+                padding-left: 10px;
                 text-transform: capitalize;
                 font-weight: normal;
-                text-align:left; //fix dir auto issue
+                text-align: left; //fix dir auto issue
             }
         }
 
@@ -204,7 +206,7 @@ body {
                 font-size: 12px;
                 display: block;
                 margin-top: 5px;
-                text-align:left; //fix dir auto issue
+                text-align: left; //fix dir auto issue
             }
         }
     }
