--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/GeneralWithStatic.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/GeneralWithStatic.css
@@ -361,6 +361,8 @@ body {
   align-items: center;
   -webkit-justify-content: flex-start;
   justify-content: flex-start;
+  max-width: 100%;
+  padding-right: 10px;
 }
 .box-template-flex .info .top .icon {
   width: 60px;
@@ -377,7 +379,7 @@ body {
   line-height: 29px;
   height: 58px;
   margin: 0;
-  padding: 0 10px;
+  padding-left: 10px;
   text-transform: capitalize;
   font-weight: normal;
   text-align: left;
