--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
@@ -250,7 +250,7 @@ md-menu-item {
         .flag-form {
             max-width: 430px;
 
-            .title {
+            .title, input {
                 color: @textColorBlack;
             }
         }
