Some bug fixes.

--- a/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Flashcards.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Flashcards.cshtml
@@ -34,6 +34,6 @@
         </md-menu>
     </li>
 </ul>
-<a ui-sref="flashcardCreate({boxtype: f.params.boxtype, universityType:f.params.universityType, boxId: f.params.boxId, boxName:f.params.boxName})" class="add" hide show-xs ng-click="i.openUpload()" hide-gt-xs>
+<a ui-sref="flashcardCreate({boxtype: f.params.boxtype, universityType:f.params.universityType, boxId: f.params.boxId, boxName:f.params.boxName})" class="add" hide show-xs hide-gt-xs user-not-register-click>
     <md-icon md-svg-icon="t:add"></md-icon>
 </a>
