--- a/Zbang.Cloudents.Mvc4WebRole/Views/Account/Info.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Account/Info.cshtml
@@ -28,7 +28,7 @@
                 <md-select name="notification" md-on-close="i.changeLanguage()" ng-model="i.data.language" md-container-class="dd-list" ng-model-options="{trackBy: '$value'}" ga-track-event="['settings', 'change language']">
                     @foreach (var lang in Zbang.Zbox.Infrastructure.Culture.Languages.SupportedCultures)
                     {
-                        <md-option value="@lang.Culture.First()">@lang.Name</md-option>
+                        <md-option value="@lang.Culture.First()">@lang.Name.GetEnumDescription()</md-option>
                     }
                 </md-select>
             </md-input-container>
