--- a/Zbang.Cloudents.Mvc4WebRole/Views/Quiz/CreateQuiz.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Quiz/CreateQuiz.cshtml
@@ -24,7 +24,7 @@
             <input class="form-control" name="name" ng-disabled="q.quizNameDisabled && q.quizData.name" type="text"
                    placeholder="@QuizResources.EnterQuizName" autofocus required md-no-asterisk ng-model="q.quizData.name"
                    ng-model-options="{ updateOn: 'blur', debounce: {  blur: 0 } }" ng-blur="q.quizNameDisabled = true" />
-            <button type="button" ng-click="q.quizNameDisabled = false"><md-icon md-svg-icon="t:edit"></md-icon>@*@Html.Svg("~/images/site/icons.svg", "edit")*@</button>
+            <button type="button" ng-click="q.quizNameDisabled = false"><md-icon md-svg-icon="t:edit"></md-icon></button>
             <div class="error-message" ng-messages="quizName.name.$error" ng-show="quizName.name.$touched">
                 <div ng-message="required">@GeneralResources.RequiredField</div>
             </div>
