--- a/Zbang.Cloudents.Mvc4WebRole/Views/Search/Index.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Search/Index.cshtml
@@ -3,11 +3,9 @@
 @using Zbang.Cloudents.Mvc4WebRole.Views.Shared.Resources
 
 <div class="page-head indent-content">
-    <div class="ad">
+    @*<div class="ad">
         <adsense ad-client="ca-pub-1215688692145777" ad-slot="8691201752" inline-style="display:block;" ad-format="auto"></adsense>
-
-        @*<div data-ng-dfp-ad="div-gpt-ad-1461243129238-6" data-ng-dfp-ad-hide-when-empty></div>*@
-    </div>
+    </div>*@
     <div layout="row" layout-align="space-between center" class="page-title">
         <h1 flex>@SearchResources.SearchTitle</h1>
         <button flex="none" type="button" class="close" ng-click="s.back()" ga-track-event="['search', 'close search']"><md-icon md-svg-icon="t:close"></md-icon></button>
