--- a/Zbang.Cloudents.Mvc4WebRole/Views/User/Index2.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/User/Index2.cshtml
@@ -3,9 +3,9 @@
 @using Zbang.Cloudents.Mvc4WebRole.Views.User.Resources
 @using Zbang.Cloudents.Mvc4WebRole.Views.Shared.Resources
 @using Zbang.Zbox.Infrastructure.Consts
-<div class="ad">
+@*<div class="ad">
     <adsense ad-client="ca-pub-1215688692145777" ad-slot="1334764954" inline-style="display:block;" ad-format="auto"></adsense>
-</div>
+</div>*@
 @*<div class="page-head indent-content">
     <div class="page-title">
         <h1>@IndexResources.User </h1>
