Some adsense fixes
change of user api

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
@@ -1065,3 +1065,9 @@ md-toast .md-toast-content span {
 .mainAd.hide-Ad {
     display:none !important;
 }
+.mainAd.fullPage {
+     @media(min-width: 960px) {
+        margin-left: -240px;
+        width: ~"calc(100% + 260px)";
+    }
+}
