Fix duplicate sentences in pdf text extraction

--- a/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Empty.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Empty.cshtml
@@ -7,9 +7,9 @@
              ad-format="auto"></adsense>
 </div>
 <div flex>
-    <div class="ad">
+    @*<div class="ad">
         <adsense ad-client="ca-pub-1215688692145777" ad-slot="8210510557" inline-style="display:block;" ad-format="auto"></adsense>
-    </div>
+    </div>*@
     @* ReSharper disable once Mvc.PartialViewNotResolved *@
     @{ Html.RenderPartial("_Upload");}
     <div ui-view animation-location></div>
