Fix issue in flashcard

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
@@ -992,7 +992,7 @@
 
                         p {
                             font-size: 48px;
-                            overflow: auto;
+                            overflow: scroll;
                             height: 100%;
                             margin: 0 auto;
 
@@ -1015,6 +1015,7 @@
 
                         @media(max-width: 600px) {
                             width: 100%;
+                             height: 50%;
                         }
                     }
 
