--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.rtl.css
@@ -1184,7 +1184,7 @@
 }
 .flashcardPage .card-player .card-template .card-content .side .text-container p {
   font-size: 48px;
-  overflow: auto;
+  overflow: scroll;
   height: 100%;
   margin: 0 auto;
 }
@@ -1207,6 +1207,7 @@
   .flashcardPage .card-player .card-template .card-content .side .img-container,
   .flashcardPage .card-player .card-template .card-content .side .text-container {
     width: 100%;
+    height: 50%;
   }
 }
 .flashcardPage .card-player .card-template .card-content .side .img-container img,
