--- a/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Index.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Index.cshtml
@@ -36,22 +36,7 @@
                 <span>{{f.slidepos}}/{{::f.flashcard.cards.length}}</span>
             </div>
         </div>
-        @*<div multiswitch-when="0" class="promo-ad" ng-click="f.details($event)" ng-if="f.flashcard.universityData">
-            <div class="text">
-                <h1>Flashcard Launch Contest</h1>
-                <div class="text-line">
-                    <div class="start">Your chance to win $500</div>
-                    <div class="end">
-                        <md-icon md-svg-icon="t:share"></md-icon>
-                        <div class="share">your flashcard set</div>
-                        <div class="button">
-                            <div class="content">Learn More</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>*@
-        <button ng-click="app.back(f.backUrl)" class="close-btn">
+       <button ng-click="app.back(f.backUrl)" class="close-btn">
             <md-icon md-svg-icon="t:close"></md-icon>
         </button>
         <div multiswitch-when="1" class="card-sides" hide-xs>
@@ -92,7 +77,7 @@
                 <span ng-if="f.step==2">!</span>
             </div>
             <div class="action-buttons">
-                <button type="button" class="action-btn" user-not-register-popup="click" ng-click="f.start()">
+                <button type="button" class="action-btn" @*user-not-register-popup="click"*@ ng-click="f.start()">
                     <span>@FlashcardResources.Start</span><span ng-if="f.step==2">&nbsp;@FlashcardResources.Over</span>
                 </button>
                 <button type="button" class="action-btn pinned-cards" user-not-register-popup="click" ng-if="f.pinCount" ng-click="f.startPin()">
