--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
@@ -898,6 +898,13 @@
                         //margin: auto;
                         display: block;
                     }
+
+                    .text-container p {
+                        padding: 0;
+                    }
+                    //.img-container + .text-container {
+                    //    height:50%;
+                    //}
                 }
             }
 
@@ -992,8 +999,8 @@
 
                         p {
                             font-size: 48px;
-                            overflow: scroll;
-                            height: 100%;
+                            overflow: auto;
+                            height: 100%; // IE will fuck up if you change this
                             margin: 0 auto;
 
                             &.lessText {
@@ -1010,12 +1017,13 @@
 
                     .img-container, .text-container {
                         height: 100%;
+                        overflow: hidden; // mozilla fix
                         width: 50%;
                         flex-grow: 1;
 
                         @media(max-width: 600px) {
                             width: 100%;
-                             height: 50%;
+                            height: 50%;
                         }
                     }
 
