--- a/Zbang.Cloudents.Mvc2Jared/Views/Shared/_layoutPage.cshtml
+++ b/Zbang.Cloudents.Mvc2Jared/Views/Shared/_layoutPage.cshtml
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Query</title>
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <link href="~/Content/angular-material.min.css" rel="stylesheet" />
 </head>
 <body ng-app="app">
     <div class="container body-content" ng-controller="AppController as st">
@@ -16,12 +16,12 @@
             <p>&copy; @DateTime.Now.Year - Yifat and Jared Application</p>
         </footer>
     </div>
-    <script src="~/Scripts/angular/angular.min.js"></script>
     <script src="~/Scripts/jquery-3.1.1.min.js"></script>
     <script src="~/Js/app.js"></script>
     <script src="~/Js/ajaxService.js"></script>
     <script src="~/Js/app.service.js"></script>
     <script src="~/Js/app.controller.js"></script>
+    <script src="~/Scripts/jquery-3.1.1.min.js"></script>
     <script src="~/Scripts/jquery.validate.min.js"></script>
     <script src="~/Js/main.js"></script>
 </body>
