fix bootstrap import

--- a/Zbang.Cloudents.Mvc2Jared/Views/Shared/_layoutPage.cshtml
+++ b/Zbang.Cloudents.Mvc2Jared/Views/Shared/_layoutPage.cshtml
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Query</title>
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
-    <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
 </head>
 <body ng-app="app">
@@ -21,6 +20,7 @@
     <script src="~/Js/ajaxService.js"></script>
     <script src="~/Js/app.service.js"></script>
     <script src="~/Js/app.controller.js"></script>
+    <script src="~/Scripts/bootstrap.min.js"></script>
     <script src="~/Scripts/jquery-3.1.1.min.js"></script>
     <script src="~/Scripts/jquery.validate.min.js"></script>
     <script src="~/Js/main.js"></script>
