--- a/Zbang.Cloudents.Mvc2Jared/Views/Shared/_layoutPage.cshtml
+++ b/Zbang.Cloudents.Mvc2Jared/Views/Shared/_layoutPage.cshtml
@@ -16,10 +16,12 @@
         </footer>
     </div>
     <script src="~/Scripts/jquery-3.1.1.min.js"></script>
+    <script src="~/Scripts/angular/angular.min.js"></script>
     <script src="~/Js/app.js"></script>
     <script src="~/Js/ajaxService.js"></script>
     <script src="~/Js/app.service.js"></script>
     <script src="~/Js/app.controller.js"></script>
+    <script src="~/Scripts/tether.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
     <script src="~/Scripts/jquery-3.1.1.min.js"></script>
     <script src="~/Scripts/jquery.validate.min.js"></script>
