--- a/Zbang.Cloudents.Mvc2Jared/Views/Home/page.cshtml
+++ b/Zbang.Cloudents.Mvc2Jared/Views/Home/page.cshtml
@@ -14,39 +14,55 @@
                 <md-content md-theme="docs-dark" >
                     <div class="form">
                   
-                            <input name="university" ng-model="st.formData.university">
+                            <input name="university" placeholder="University" ng-model="st.formData.university"> 
      
                     
-                            <input name="department" ng-model="st.formData.department">
-   
-                   
+                            <input name="department" placeholder="Department" ng-model="st.formData.department">
+                      
                         
-                            <input name="class" ng-model="st.formData.box">
-                            <input name="boxId" ng-model="st.formData.boxId">
+                            <input name="class" placeholder="Class" ng-model="st.formData.box">
+
+
+                            <input name="boxId" placeholder="BoxID" ng-model="st.formData.boxId">
                     
                     </div>
                 </md-content>
+
+
+
                 <div class="form-group">
-                    <input class="form-control"  placeholder="Item Name" name="name" ng-model="st.formData.name"/>
+                    <input class="form-control"  placeholder="Item Name" name="item name" ng-model="st.formData.name"/>
                 </div>
                               
                 <div class="form-actions">
-                    <button type="submit" class="md-raised md-primary md-button md-ink-ripple">
+                    <button name="search_btn" type="submit" class="md-raised md-primary md-button md-ink-ripple">
                         Search
                     </button>
                 </div>
-                <div class="form-group row">
-                        <div class="form-check mb-2 mr-sm-2 mb-sm-0">
-                            <label class="form-check-label">
-                                <input ng-class="form-check-input" type="checkbox" name="isReviewed" ng-model="st.formData.isReviewed"> Was Reviewd
-                            </label>
-                        </div>
-                        <div class="form-check mb-2 mr-sm-2 mb-sm-0">
-                            <label class="form-check-label">
-                                <input class="form-check-input" type="checkbox" ng-model="st.formData.isSearchType" name="isSearchType"> No search Type
-                            </label>
-                        </div>
-               </div>
+
+
+                <div1 class="form-group row">
+                    <div class="form-check mb-2 mr-sm-2 mb-sm-0">
+                        <label1 class="form-check-label">
+                            <input ng-class="form-check-input" type="checkbox"
+                                   name="isReviewed" ng-model="st.formData.isReviewed"> Was Reviewd
+                        </label1>
+                    </div>
+
+
+                    <div class="form-check mb-2 mr-sm-2 mb-sm-0">
+                        <label class="form-check-label">
+                            <input class="form-check-input" type="checkbox" ng-model="st.formData.isSearchType"
+                                   name="isSearchType"> No search Type
+                        </label>
+                    </div>
+                </div1>
+
+                
+                     
+
+
+               
             </form>
         </div>
 </body>
