--- a/Zbang.Cloudents.Mvc2Jared/Content/Site.css
+++ b/Zbang.Cloudents.Mvc2Jared/Content/Site.css
@@ -1,22 +1,22 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
-    width:1336px;
 }
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
-    padding-right: 15px;    
+    padding-right: 15px; 
+}
+
+
+form{
+       
     background: #003b78;
 }
 
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-  
-}
+
+
 
 input{     
     border: none; 
@@ -74,21 +74,81 @@ button[name="search_btn"] {
     border: none;   
     margin-right: 36.4px;    
     margin-top:15px;
+    margin-bottom:5px;
     color:white;
-    width: 119.6px;
+    width: 127px;
     height: 32px;
     border-radius: 8px;
     background-color: #3293f6;
 }
-
-
-label { 
-    color: white;
-
+div0 {
+    color:white;
+    font-family: .SFNSText;
+  font-size: 12px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
 }
 
-div1{
-    background-color:dimgray;
-    margin-top:20px;
+input[name="isReviewed"]{
+    margin-left: 35px;
+}
+input[name="isSearchType"]{
+    margin-left: 25px;
+}
+
+
+
+
+div1{      
+    height:40px;
+    width:1336px;
+    background-color: #f2f2f2;
+}
+
+button[name="img_btn"] {
+    margin-left: 35px;
+  height: 23px;
+    background-image: url('../images1/combined-shape@3x.png');
+}
+
+label[name="save_btn"] {
+    margin-left: 35px;
+    width: 47px;
+    height: 23px;
+    font-family: .SFNSText;
+    font-size: 20px;
+    font-weight: bold;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: -0.5px;
+    color: #3293f6;
+}
+
+
+
+button[name="back_btn"] {
+    margin-left: 541px;
+    margin-right: 150px; 
+    width:24px;
+    height:24px;
+}
+
+
+button[name="next_btn"] {
+    margin-right: 20px; 
+    margin-left:150px;
+    width:24px;
+    height:24px;
+}
+
+
+div2{    
+    margin-left:35px;
+    height:1024px;
+    width: 1300px;
+    background-color: white;
 }
 
